--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@ out/
 /broadcast/*/31337/
 /broadcast/**/dry-run/
 
-# Docs
-docs/
+# Docs - ignore built output but allow source
+docs/book/
+docs/foundry-docs/
 
 # Dotenv file
 .env
